# Bomberman-Game

./: .clang-format  .gitignore  Bomberman.sln  CMakeLists.txt  CMakePresets.json  README.md  icon.rc  vcpkg.json
Bomberman/: AnimateSystem.hpp  Animated.cpp  Animated.hpp  App.cpp  Bomb.hpp  Bomberman.vcxproj  Bomberman.vcxproj.filters  Collidable.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Direction.hpp  DrawSystem.cpp  DrawSystem.hpp  EcsGameplay.cpp  EcsGameplay.hpp  ExitStage.cpp  ExitStage.hpp  Explodable.hpp  ExplosionSystem.cpp  ExplosionSystem.hpp  GameResult.hpp  GameStage.cpp  GameStage.hpp  GameplayStage.cpp  GameplayStage.hpp  IGameStage.hpp  Map.hpp  MenuStage.cpp  MenuStage.hpp  Movable.hpp  MoveSystem.cpp  MoveSystem.hpp  Player.hpp  PowerUpSystem.cpp  PowerUpSystem.hpp  ResourceID.hpp  ResourceManager.hpp  SpawnBombEvent.hpp  SpawnFlameEvent.hpp  SpawnPowerUpEvent.hpp  (+2 more)
Bomberman/include/: App.hpp
Bomberman/include/AppStages/: EcsGameplay.hpp  ExitStage.hpp  GameStage.hpp  GameplayStage.hpp  MenuStage.hpp
Bomberman/include/EcsComponents/: Animated.hpp  Collidable.hpp  Drawable.hpp  Flame.hpp  Movable.hpp  Player.hpp  Portal.hpp  PowerUp.hpp  Solid.hpp  Tile.hpp  TopLevel.hpp  Transformable.hpp
Bomberman/include/EcsEvents/: FinishGameEvent.hpp  GameFinishedEvent.hpp  MoveChangeEvent.hpp  SpawnPortalEvent.hpp  SpawnTileEvent.hpp
Bomberman/include/EcsSystems/: AnimateSystem.hpp  CollisionSystem.hpp  DrawSystem.hpp  ExplosionSystem.hpp  MoveSystem.hpp  SpawnSystem.hpp
Bomberman/include/Enums/: GameStatus.hpp  MenuOption.hpp  PowerUpType.hpp  ResourceID.hpp  TileType.hpp
Bomberman/include/Utils/: Constants.hpp  MapCreator.hpp  PlayersCreator.hpp  ResourceHolder.hpp  Utils.hpp
Bomberman/source/: App.cpp
Bomberman/source/AppStages/: EcsGameplay.cpp  ExitStage.cpp  GameStage.cpp  GameplayStage.cpp  MenuStage.cpp
Bomberman/source/EcsSystems/: AnimateSystem.cpp  CollisionSystem.cpp  DrawSystem.cpp  ExplosionSystem.cpp  MoveSystem.cpp  SpawnSystem.cpp
Bomberman/source/Utils/: MapCreator.cpp  PlayersCreator.cpp
cmake/: common.cmake  format.cmake
cmake/presets/: base.json  x64-linux-clang.json  x64-linux-gcc.json  x64-windows-gcc.json
cmake/presets/compilers/: clang.json  gcc.json  msvc.json
cmake/presets/os/: linux.json  windows.json
cmake/presets/toolchains/: vcpkg.json
cmake/vcpkg/triplets/: x64-windows-gcc.cmake
src/: CMakeLists.txt  main.cpp
src/enums/: direction.hpp  game_result.hpp
src/game/: game.cpp  game.hpp  game_manager.cpp  game_manager.hpp
src/game/stages/: stage.cpp  stage.hpp
src/game/stages/exit/: exit_stage.cpp  exit_stage.hpp
src/game/stages/menu/: menu_stage.cpp  menu_stage.hpp
src/game/stages/play/: collision_detector.cpp  collision_detector.hpp  config.hpp  entity_creator.cpp  entity_creator.hpp  map_creator.cpp  map_creator.hpp  play_stage.cpp  play_stage.hpp  resource_holder.hpp
src/game/stages/play/components/: animated.hpp  bomb.hpp  collidable.hpp  debuggable.hpp  drawable.hpp  flame.hpp  map.hpp  movable.hpp  player.hpp  portal.hpp  power_up.hpp  tile.hpp  transformable.hpp  z_index.hpp
src/game/stages/play/events/: finish_game_event.hpp  game_finished_event.hpp  move_change_event.hpp  spawn_bomb_event.hpp  spawn_tile_event.hpp
src/game/stages/play/systems/: animate_system.cpp  animate_system.hpp  collision_system.cpp  collision_system.hpp  explosion_system.cpp  explosion_system.hpp  move_system.cpp  move_system.hpp  render_system.cpp  render_system.hpp  spawn_system.cpp  spawn_system.hpp
src/game/stages/settings/: settings_stage.cpp  settings_stage.hpp
src/resources/: configuration.toml
src/util/: constants.hpp  converters.hpp  resource_holder.hpp  tile_calculator.hpp  types.hpp
